--- a/requirements.txt
+++ b/requirements.txt
@@ -1,74 +1,19 @@
-adjacent==1.1.0
-aiohttp==3.6.2
-altgraph==0.16.1
-asgiref==3.2.7
-astroid==2.3.3
-mysql-connector-python==8.0.21
-async-timeout==3.0.1
 jishaku==1.18.2.188
-attrs==19.3.0
-beautifulsoup4==4.7.1
-cent==3.0.1
-certifi==2019.3.9
-chardet==3.0.4
-choice==0.1
-colorama==0.4.1
-Counter==1.0.0
 COVID19Py==0.3.0
 Cybernator==0.6.2
 discord==1.0.1
 discord.py==1.5.1
 dj-database-url==0.5.0
-Django==3.0.6
-django-heroku==0.3.1
-future==0.17.1
-geojson==2.4.1
 getpass3==1.2
-vk==2.0.2
-vk-api==11.9.0
-gunicorn==20.0.4
-h5py==2.10.0
-idna==2.8
-isort==4.3.21
-Keras==2.3.1
-Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.0
-lazy-object-proxy==1.4.3
-macholib==1.11
-mccabe==0.6.1
-multidict==4.5.2
-numpy==1.16.4
-pefile==2019.4.18
-pip==20.1
-psycopg2==2.8.5
-py2exe==0.9.2.2
-pygame==1.9.6
-PyInstaller==3.4
-pylint==2.4.4
-pyowm==2.10.0
-ffmpeg==1.4
-pyttsx3==2.71
-pytz==2020.1
-psutil==5.7.2
-PyYAML==5.2
-requests==2.21.0
-scipy==1.4.1
-setuptools==40.8.0
-six==1.13.0
-soupsieve==1.9.1
-SpeechRecognition==3.8.1
 speedtest-cli==2.1.2
-sqlparse==0.3.1
-PyNaCl==1.4.0
 typed-ast==1.4.1
 typing==3.7.4.1
 urllib3==1.24.2
 pymongo==3.11.0
-websockets==6.0
-wheel==0.34.2
 dnspython==2.0.0
-whitenoise==5.0.1
 wikipedia==1.4.0
 wrapt==1.11.2
 yarl==1.3.0
 youtube-dl==2019.5.20
+discord-buttons-plugin==0.1.2
+discord-components==1.1.4
